--- a/main.html
+++ b/main.html
@@ -12,16 +12,16 @@
 </script>
 <form method="post">
 	<label for="name">Name</label>
-	<input type="text" id="name" minlength="3" maxlength="50" required>
+	<input type="text" id="name" minlength="3" maxlength="50" required />
 	<br>
 	<label for="portfolio">Portfolio</label>
-	<input type="url" id="portfolio" required>
+	<input type="url" id="portfolio" required />
 	<br>
 	<label for="favColor">Favorite Color</label>
-	<input type="color" id ="favColor" required>
+	<input type="color" id="favColor" required />
 	<br>
 	<label for="likeness">Likeness</label>
-	<input type="range" id="likeness" min="1" max="100" required>
+	<input type="range" id="likeness" min="1" max="100" required />
 	<br>
 	<button type="submit">submit</button>
 </form>
