--- a/main.html
+++ b/main.html
@@ -12,13 +12,13 @@
 </script>
 <form method="post">
 	<label for="name">Name</label>
-	<input type="text" id="name" minlength="3" maxlength="50" required />
+	<input type="text" name="name" id="name" minlength="3" maxlength="50" required />
 	<br>
 	<label for="portfolio">Portfolio</label>
-	<input type="url" id="portfolio" required />
+	<input type="url" name="potfolio" id="portfolio" required />
 	<br>
 	<label for="favColor">Favorite Color</label>
-	<input type="color" id="favColor" />
+	<input type="color"  name ="color"id="favColor" />
 	<br>
 	<label for="likeness">Likeness</label>
 	<input type="range" id="likeness" min="1" max="100" />
