--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
 	<input type="color"  name ="color"id="favColor" />
 	<br>
 	<label for="likeness">Likeness</label>
-	<input type="range" id="likeness" min="1" max="100" />
+	<input type="range" name="likeness" id="likeness" min="1" max="100" />
 	<br>
 	<button type="submit">submit</button>
 </form>
