--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 	<input type="text" name="name" id="name" minlength="3" maxlength="50" required />
 	<br>
 	<label for="portfolio">Portfolio</label>
-	<input type="url" name="potfolio" id="portfolio" required />
+	<input type="url" name="portfolio" id="portfolio" required />
 	<br>
 	<label for="favColor">Favorite Color</label>
 	<input type="color"  name ="color"id="favColor" />
