--- a/main.html
+++ b/main.html
@@ -11,8 +11,9 @@
     <script type="text/javascript" src="./script.js">
 </script>
 <form method="post">
+	<h2>Feedback Form</h2>
 	<label for="name">Name</label>
-	<input type="text" name="name" id="name" minlength="3" maxlength="50" required />
+	<input type="text" name="full_name" id="name" minlength="3" maxlength="50" required />
 	<br>
 	<label for="portfolio">Portfolio</label>
 	<input type="url" name="portfolio" id="portfolio" required />
